force-app/main/default/objects/BusinessLicenseApplication/fields/Activity_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Activity_Approval_Status__c</fullName>
    <description>This field is used to display the color on the basis of approval or rejection of related activities/tasks.</description>
    <formula>CASE(Activity_Status__c,
 &apos;Approved&apos;, IMAGE(&apos;/resource/Green&apos;,&apos;GREEN&apos;,15,15),
 &apos;Rejected&apos;, IMAGE(&apos;/resource/Red&apos;,&apos;RED&apos;,15,15),
 TEXT(Status) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Approval Status</label>
    <type>Text</type>
</CustomField>