force-app/main/default/objects/BusinessLicenseApplication/fields/Activity_Status__c.field-meta.xml
<CustomField>
    <fullName>Activity_Status__c</fullName>
    <description>It captures the status of all the related activities / tasks.</description>
    <label>Activity Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>