force-app/main/default/objects/BusinessLicenseApplication/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It captures the account who is submitting the application on behalf of another person.</description>
    <label>Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business License Applications</relationshipLabel>
    <relationshipName>Business_License_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>