force-app/main/default/objects/BusinessLicenseApplication/fields/IsOwner__c.field-meta.xml
<CustomField>
    <fullName>IsOwner__c</fullName>
    <description>This formula field is used to display the message to reviewer queue members to assign the record to themselves before proceeding.</description>
    <formula>OwnerId  =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsOwner</label>
    <type>Checkbox</type>
</CustomField>