force-app/main/default/objects/BusinessLicenseApplication/fields/Reviewer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Comments__c</fullName>
    <description>It captures all the comments from the reviewers on the associated activities</description>
    <label>Reviewer Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>