force-app/main/default/objects/BusinessLicenseApplication/fields/Room_or_area_preference__c.field-meta.xml
<CustomField>
    <fullName>Room_or_area_preference__c</fullName>
    <description>Venue Type preferences for events.</description>
    <label>Venue Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Indoor</fullName>
            </value>
            <value>
                <fullName>Outdoor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>