force-app/main/default/objects/BusinessLicenseApplication/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>It stores the source of the application</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>