force-app/main/default/objects/BusinessLicenseApplication/validationRules/NoEditApprovedApplications.validationRule-meta.xml
<ValidationRule>
    <fullName>NoEditApprovedApplications</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
NOT( $Permission.Delegated_User ),
NOT(ISCHANGED( LicensePermitNameId )),
OR(
ISPICKVAL(PRIORVALUE(Status), &quot;Approved&quot;),
ISPICKVAL(PRIORVALUE(Status), &quot;Rejected&quot;)
)
)</errorConditionFormula>
    <errorMessage>Review has been completed and application can no longer be edited. Please contact System Administrator if you need to make any changes.</errorMessage>
</ValidationRule>