force-app/main/default/objects/BusinessLicenseApplication/validationRules/Review_Comments_are_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Review_Comments_are_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
OR(
ISPICKVAL(Status, &apos;Approved&apos;),
ISPICKVAL(Status, &apos;Rejected&apos;)
),
ISBLANK( Reviewer_Comments__c )
)</errorConditionFormula>
    <errorMessage>Please provide Reviewer Comments</errorMessage>
</ValidationRule>